2009-09-16 Magnus Hagdorn
 * configure.in: user can specify if they want to use the SGE to submit jobs
   when running tests/examples
 * make.rules: find the correct model to run
 * scripts/glide_launch.py: simplify selection of model
 * scripts/qsub_glide.sh: pass environment to SGE job
 * tests/EISMINT/EISMINT-1/Makefile.am: select simple_glide binary
 * tests/EISMINT/EISMINT-2/Makefile.am: ditto
 * tests/EISMINT/benchmarks/Makefile.am: ditto
 * tests/EISMINT/isos/Makefile.am: ditto
 * tests/EISMINT/lin-non_lin/Makefile.am: ditto

2009-09-15 Magnus Hagdorn
 * convert some more comments in another bunch of files to doxygen strings
 * libglimmer/glimmer_ncdf.F90: move second module to glimmer_scales.F90

2009-09-15 Magnus Hagdorn
 * convert comments in a bunch of files to doxygen strings

2009-09-14 Magnus Hagdorn
 * README: document new make target to build tar-ball of html docs
 * doc/Makefile.am: new target to build tar-ball of html docs which
   can be uploaded to berliOS (or elsewhere)

2009-09-10 Magnus Hagdorn
 * libglimmer/glimmer_ts.F90: change documentation strings to doxygen

2009-09-10 Magnus Hagdorn
 * README: document documentation build
 * bootstrap: don't warn about possible incompatibilities in Makefiles
 * configure.in: find doxygen
 * doc/Makefile.am: add targets for doxygen 
 * doc/glimmer-cism.cfg.in: added template doxygen configuration
 * m4macros/amdoxygen.am: makefile snippet for doxygen
 * m4macros/ax_prog_doxygen.m4: autoconf macro for handling doxygen

2009-09-08 Magnus Hagdorn
 * libglimmer/glimmer_vers.F90.in.in: fix fortran error

2009-09-07 Magnus Hagdorn
 * libglimmer/glimmer_vers.F90.in.in: version numbers are no longer stored in
   a module, but accessed through accessors to avoid unnessary recompilations
 * libglide/glide.F90: call new accessor to get version
 * libglide/glimmer_ncparams.F90: ditto
 * libglimmer/Makefile.am: pass top source directory to version script