@@ -1,2 +1,5 @@
-SUBDIRS = matlab src scripts
+SUBDIRS = matlab src scripts tests
 EXTRA_DIST = README
+
+data::
+	(cd tests && $(MAKE) $@)
